ステップを追加した

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
     <div>
         <ul>
-            <li>
-                step 1
-            </li>
+            <li>step 1: clone</li>
+            <li>step 2: add</li>
+            <li>step 3: commit</li>
+            <li>step 4: push</li>
         </ul>
     </div>
 </body>
