初めにの少しの追加と，枝分かれの追加

--- a/index.html
+++ b/index.html
@@ -10,14 +10,35 @@
 <body>
     <h1>久しぶりにHTMLを書いてみた！</h1>
 
+    <h2>知っておくと便利なgitコマンド</h2>
+
+    <div>はじめに</div>
+
     <div>
         <ul>
             <li>step 1: clone</li>
+            <div>GitHubにある全てのファイルを自分のパソコンに入れる</div>
             <li>step 2: add</li>
+            <div>新しいファイルを作ったよって知らせる</div>
             <li>step 3: commit</li>
+            <div>ディレクトリを更新する</div>
             <li>step 4: push</li>
+            <div>GitHubにアプロードする</div>
+            <li>status</li>
+            <div>今現在の上場を理解する</div>
         </ul>
     </div>
+
+    <div>枝分かれ</div>
+
+    <ol>
+        <li>branch</li>
+        <li>checkout</li>
+        <li>merge</li>
+        <li>delete</li>
+    </ol>
+
+
 </body>
 
 </html>
