枝分かれの詳細を追加した．

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 
     <ol>
         <li>branch</li>
+        <div>新しい枝を作る</div>
         <li>checkout</li>
+        <div>他の枝に移動する</div>
         <li>merge</li>
-        <li>delete</li>
+        <div>枝をマイン枝と合流させる</div>
+        <li>branch -d</li>
+        <div>使い終わった枝を削除する</div>
     </ol>
 
 
